// Vitest Snapshot v1

exports[`Overriding templates > should use an override template if one exists 1`] = `
"# This is an override template
Example ADR
DATE-STRING-HERE
2
Accepted"
`;

exports[`Overriding templates > should use an override template if one exists 2`] = `
"# This is an override template
Another Example ADR
DATE-STRING-HERE
3
Accepted"
`;
